Using Integer.valueOf() instead of the constructor in Statistics.